actualizando practica 2 del segundo parcial

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="practica1.html">Practica 1 - 2Parcial</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="practica2.html">Practica 2 - 2Parcial</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
