--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Mis Proyectos</a>
+                  <a class="nav-link" href="cv.html">¿Quien soy?</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
