--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <div class="carousel-inner" >
                 <div class="carousel-item active" >
                   <img  src="https://cdn.discordapp.com/attachments/899797214757543978/1154645114262659072/image.png" class="d-block w-100 img-fluid" alt="...">
-                  <div class="carousel-caption d-none d-sm-block">
+                  <div class="carousel-caption .d-none">
                     <h2>No Signal</h2>
                     <p>Un juego de sigilo un poco hardcore.</p><a class="btn btn-warning button-font-color" href="https://donvergasdev69.itch.io/no-signal-game" role="button">JUGAR</a>
                   </div>
@@ -86,14 +86,14 @@
                 <div class="carousel-item">
                   <img src="https://cdn.discordapp.com/attachments/899797214757543978/1154647650516348968/image.png" 
                   class="d-block w-100 img-fluid" alt="...">
-                  <div class="carousel-caption d-none d-sm-block">
+                  <div class="carousel-caption .d-none">
                     <h2>Xolo´s Ride</h2>
                     <p>Runner al estilo mexicano donde el arte es hermoso</p><a class="btn btn-warning button-font-color" href="https://sergiogg05.itch.io/xolosride" role="button">JUGAR</a>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="https://cdn.discordapp.com/attachments/899797214757543978/1154651078663622666/image.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-sm-block">
+                  <div class="carousel-caption .d-none">
                     <h2>Aventuras Cotorras</h2>
                     <p>Slobo solo quiere comer Hamburguesas</p><a class="btn btn-warning button-font-color" href="https://donvergasdev69.itch.io/aventurascotorras-20" role="button">JUGAR</a>
                   </div>
