--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
       <nav class="navbar bg-body-tertiary sticky-top "  data-bs-theme="dark" >
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html" ><img src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt="">Claw Gaming</a>
+          <article class="row">
+            <div class="col-sm-12 "   >
+              <ul class="nav justify-content-center ">
+                <li class="nav-item">
+                  <a href="#noticias">Noticias</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </li>
+              </ul>
+            </div>
+          </article>
+        
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -107,6 +126,38 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
+            </div>
+          </article>
+        </section>
+      </div>
+      <div id="noticias" class="background-notices"><!--Aqui estan las noticias-->
+        <section class="container font-claw">
+          <article >
+            <div class="row">
+              <div class="col-sm-6 mb-3 mb-sm-0">
+                <div class="card card-notices-color">
+                  <div class="card-body">
+                    <p 
+                    class="card-text"><small class="text-body-secondary">14 de Agosto 2024</small></p>
+                    <h5 class="card-title">WAR ROBOTS VR HAND</h5>
+                    <p class="card-text">Esta en desarrollo una experiencia en VR donde seras un mecha.</p>
+                    <a href="#" class="btn btn-warning">Conocer más</a>              
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card card-notices-color">
+                  <div class="card-body">
+                    <p 
+                    class="card-text"><small class="text-body-secondary">12 de Octubre 2022</small></p>
+                    <h5 class="card-title">Participamos en GAME JAM+</h5>
+                    <p class="card-text">Empezamos a colaborar en una Game Jam</p>
+                   
+                    <a  href="https://gamejamplus.com/" class="btn btn-warning" >Conocer más</a>  
+                    </div>                
+                  </div>
+                </div>
+              </div>
             </div>
           </article>
         </section>
