--- a/index.html
+++ b/index.html
@@ -24,24 +24,19 @@
     <header>
       <nav class="navbar bg-body-tertiary sticky-top "  data-bs-theme="dark" >
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html" ><img src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt="">Claw Gaming</a>
+          <a class="navbar-brand a-navbar" href="index.html" ><img src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt="">Claw Gaming</a>
           <article class="row">
-            <div class="col-sm-12 "   >
-              <ul class="nav justify-content-center ">
-                <li class="nav-item">
-                  <a href="#noticias">Noticias</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </li>
-              </ul>
-            </div>
+            <ul class="nav justify-content-around ">
+              <li class="nav-item ">
+                <a class="navbar-brand a-navbar" aria-current="page" href="#noticias">Noticias</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand a-navbar" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand a-navbar" href="#">Link</a>
+              </li>           
+            </ul>
           </article>
         
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -131,6 +126,9 @@
         </section>
       </div>
       <div id="noticias" class="background-notices"><!--Aqui estan las noticias-->
+        <center>
+          <h2 class="">Ultimas Noticias </h2>
+        </center>      
         <section class="container font-claw">
           <article >
             <div class="row">
