--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
     <header>
       <nav class="navbar bg-body-tertiary sticky-top "  data-bs-theme="dark" >
         <div class="container-fluid">
-          <a class="navbar-brand a-navbar" href="index.html" ><img src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt="">Claw Gaming</a>
+          <a class="navbar-brand a-navbar" href="index.html" ><img src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt=""></a>
           <article class="row">
             <ul class="nav justify-content-around ">
               <li class="nav-item ">
                 <a class="navbar-brand a-navbar" aria-current="page" href="#noticias">Noticias</a>
-              </li>
-              <li class="nav-item">
+               </li>
+               <li class="nav-item">
                 <a class="navbar-brand a-navbar" href="#">Link</a>
-              </li>
-              <li class="nav-item">
+               </li>
+               <li class="nav-item">
                 <a class="navbar-brand a-navbar" href="#">Link</a>
               </li>           
             </ul>
           </article>
         
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button"             data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
