--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar bg-body-tertiary sticky-top "  data-bs-theme="dark" >
         <div class="container-fluid">
-          <a class="navbar-brand a-navbar" href="index.html" ><img src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt=""></a>
+          <a class="navbar-brand a-navbar" href="index.html" ><img width="65" src="https://cdn.discordapp.com/attachments/899797214757543978/1151036526357127168/CLAW_Gaming2.png" alt=""></a>
           <article class="row">
             <ul class="nav justify-content-around ">
               <li class="nav-item ">
